edit behaviour of pre tag to not prevent wrapping text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,3 +275,20 @@ table {
     float : none;
     clear : both;
 }
+
+/* pre {
+    overflow-x : auto;
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap  : break-word;
+} */
+
+pre {
+    white-space: pre-wrap;
+    white-space: -moz-pre-wrap;
+    white-space: -pre-wrap;
+    white-space: -o-pre-wrap;
+    word-wrap  : break-word;
+}
